--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "joi": "^17.4.2"
   },
   "devDependencies": {
     "jshint": "^2.13.1"
